<resources>
    <string name="app_name">The ULTRA DELUXE Alarm</string>
    <string name="init_label">Initialization</string>
    <string name="next">next</string>
    <string name="prev">prev</string>
    <string name="finish">finish</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="action_settings">Reset Setting</string>
    <string name="action_settings_question">Are you sure you want reset settings?</string>

    <!-- String for Alarm -->
    <string name="sel_time">Set Alarm Time</string>
    <string name="setAlarm">Set</string>
    <string name="add">Add Alarm</string>
    <string name="scheduled">Alarm Scheduled</string>
    <string name="scheduledX">Alarm Not Scheduled</string>
    <string name="recurring">Alarm Recurring</string>
    <string name="recurringX">Alarm Not Recurring</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>

    <!-- String for Initialization -->
    <string name="measure_start">Start Measuring</string>
    <string name="measure_stop">Stop Measuring</string>
    <string name="inst_light_on">Turn on the Room\'s Light</string>
    <string name="inst_light_off">Turn off Room\'s Light</string>
    <!-- Light -->
    <string name="light_sensor_title">Light Sensor</string>
    <string name="light_explain">Move slider to adjust sensitivity for your room</string>
    <string name="light_on">Light ON</string>
    <string name="light_off">Light OFF</string>
    <string name="light_no_title">No Sensor</string>
    <string name="light_no_text">There were no Light Sensor detected on your device.</string>
    <!-- Motion -->
    <string name="motion_sensor_title">Motion Sensor</string>
    <string name="motion_sensor_explain">Move your body with your phone to calibrate motion sensor</string>
    <string name="motion_waiting">Waiting for Movement</string>
    <string name="motion_detected">Motion Detected</string>
    <string name="motion_complete">Calibration Complete</string>
    <string name="motion_enabled">Using Motion Sensor</string>
    <string name="motion_disabled">Not Using Motion Sensor</string>
    <string name="motion_no_title">No Sensor</string>
    <string name="motion_no_text">There were no Motion Sensor detected on your device.</string>
    <!-- Location -->
    <string name="location_sensor_title">Location Sensor</string>
    <string name="location_sensor_explain">Using GPS/Network to find your location</string>
    <string name="location_waiting">Scanning your Location</string>
    <string name="location_detected">Location Detected</string>
    <string name="location_enabled">Use Location</string>
    <string name="location_disabled">Not Using Location</string>
    <string name="location_no_title">Location Not Available</string>
    <string name="location_no_text">Location service is not available on your device or permission is not given.</string>
    <string name="hint_target_distance">Target Distance in Meters</string>
</resources>