<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="@color/black"
        android:textSize="72sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="08:00" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchRecurring"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/recurringX"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTime" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchScheduled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/scheduledX"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchRecurring" />

    <ImageButton
        android:id="@+id/imageDelete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@null"
        android:contentDescription="@string/delete"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/textTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textTime"
        app:srcCompat="@drawable/ic_baseline_delete_24" />

</androidx.constraintlayout.widget.ConstraintLayout>